# SeleniumMCP

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-azure-webapp.yml  main_selenium.yml
examples/: claude_desktop_config.json
src/selenium_mcp_server/: __init__.py  asgi.py  browser.py  config.py  models.py  server.py
tests/: test_browser_manager.py
