[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "selenium-mcp-server"
version = "0.1.0"
description = "Deployment-ready Selenium browser automation MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Selenium MCP Maintainers" }]
dependencies = [
    "mcp>=1.10.0",
    "selenium>=4.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
selenium-mcp = "selenium_mcp_server.server:main"
selenium-mcp-http = "selenium_mcp_server.asgi:main"

[tool.hatch.build.targets.wheel]
packages = ["src/selenium_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
